# templateC

./: CMakeLists.txt  main .c
Lession00/: run.c
Lession00/Baitap/: BT1.c  BT2.c  BT3.c
Lession00/Thuchanh/: BT1.c  BT2.c  BT3.c
Lession01/: run.c
Lession01/Baitap/: BT1.c  BT2.c  BT3.c
Lession01/Thuchanh/: BT1.c  BT2.c  BT3.c
Lession02/: run.c
Lession02/Baitap/: BT1.c  BT2.c  BT3.c
Lession02/Thuchanh/: BT1.c  BT2.c  BT3.c
